--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,14 @@
     padding: 0;
     margin: 0;
     font-family: 'Open Sans Condensed', cursive;
+    background-color: #171a1b;
 }
+
+/* Game Area */
 
 .base {
     background-color: #171a1b;
-    height: 100vh;
-    padding-top: 1px;
+    padding-top: 5px;
 }
 
 .title {
@@ -23,8 +25,6 @@
     color: white;
     font-size: 37px;
     text-align: center;
-    margin-top: 1em;
-    margin-bottom: 1em;
 }
 
 .hide {
@@ -65,7 +65,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 1em;
+    margin-top: 1%;
 }
 
 .controls button {
@@ -74,7 +74,7 @@
     border-radius: 8px;
     border: none;
     font-size: 20px;
-    margin-left: 1em;
+    margin-left: 0em;
     cursor: pointer;
 }
 
@@ -83,5 +83,18 @@
 }
 
 #reset {
-    background-color: #63a8cc;
+    background-color: #a0b3be;
+}
+
+/* Webpage Description - How To Play */
+
+.game-information {
+    display: flex;
+    justify-content: center;
+    color: aliceblue;
+    margin: 1%;
+    list-style: none;
+    font-size: medium;
+    text-align: center;
+    line-height: 1.5;
 }
